feat: add staff portal settings
